# AarnXen-MultiAI-MCP

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.claude-plugin/: CLAUDE.md  plugin.json
hooks/: auto-save.py  hooks.json
src/aarnxen/: __init__.py  config.py  dashboard.py  server.py
src/aarnxen/core/: cache.py  circuit_breaker.py  conversation.py  cost.py  errors.py  events.py  extractor.py  guardrails.py  knowledge.py  rate_limit.py  retry.py  router.py  tool_middleware.py  validation.py
src/aarnxen/pricing/: models.py
src/aarnxen/providers/: base.py  gemini.py  ollama.py  openai_compat.py  registry.py
src/aarnxen/tools/: challenge.py  chat.py  codereview.py  compare.py  consensus.py  costs.py  debate.py  jury.py  knowledge.py  pipeline.py  precommit.py  refine.py  swarm.py  think.py  verify.py  web_fetch.py  web_search.py
tests/: test_cache.py  test_challenge.py  test_circuit_breaker.py  test_config.py  test_cost.py  test_debate.py  test_e2e.py  test_extractor.py  test_guardrails.py  test_health.py  test_jury.py  test_knowledge.py  test_middleware.py  test_pipeline.py  test_precommit.py  test_rate_limit.py  test_refine.py  test_router.py  test_swarm.py  test_validation.py  test_verify.py  test_web_fetch.py  test_web_search.py
